--- a/style.css
+++ b/style.css
@@ -198,3 +198,33 @@ main .bannerBd{
     background-color:#ffc239 ;
 }
 
+/* Quote section start here */
+
+.quote{
+    width: 100%;
+    height: 200px;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0.5px 0.5px 1px 0 rgba(0,0,0,0.1);
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 15px;
+    color: #000009a7;
+}
+.quote .bg{
+    background-image: url("assets/quote-bg.png");
+    background-repeat: no-repeat;
+    background-size: 50px;
+}
+
+.quote p{
+    font-size: 14px;
+    line-height: 20px;
+    padding: 20px 0px;
+}
+.quote h5{
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+.quote span{
+    font-size: 12px;
+}
