--- a/style.css
+++ b/style.css
@@ -358,3 +358,54 @@ main .bannerBd{
     background-color: #006a50;
 
 }
+
+/* subscribe section start here */
+.subscribe{
+    height: 300px;
+    background-color: #c6e4d6;
+    text-align: center;
+    margin: 20px 0px;
+    border-radius: 15px;
+    padding:20px
+}
+.subscribe h3{
+    font-size: 32px;
+    margin: 20px 0px;
+}
+.subscribe .subT p{
+    font-size: 14px;
+    color: #000000a1;
+    margin: 20px 0px;
+    
+}
+
+.inputs input[type="email"]{
+    width: 350px;
+    height: 40px;
+    padding: 10px 20px;
+    background-color: #fff;
+    outline: none;
+    border: 1.5px solid rgba(0,0,0,0.1);
+    border-radius: 5px;
+    
+    text-align: center
+}
+
+.inputs input[type="submit"]{
+   
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 20px;
+    margin-top: 20px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 450;
+    outline: none;
+    border: none;
+    background-color: #006a50;
+    margin-left: -8px;
+
+}
+.inputs input[type="email"]::placeholder{
+    font-size: 16px;
+}
